# GHReleaseManager

./: .gitmodules  CMakeLists.txt  ProxyDialog.cpp  ProxyDialog.h  ProxyDialog.ui  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  watchertableview.cpp  watchertableview.h
GHManager/: GHManager.cpp  GHManager.h  GHRProgram.cpp  GHRProgram.h  README.md  UpdateStatus.cpp  UpdateStatus.h
GHManager/GHAPI/: GHConnection.cpp  GHConnection.h  GHRelease.cpp  GHRelease.h  GHReleaseAssets.cpp  GHReleaseAssets.h  GHRepo.cpp  GHRepo.h  README.md
GHManager/Matcher/: Matcher.cpp  Matcher.h
GHManager/Version/: Version.cpp  Version.h
